# Racing-all-Along

./: .gitignore  README.md  main.py  pyproject.toml
F1/notebooks/: brazil_2025.ipynb  saudi_2025.ipynb  tyre_deg.ipynb
F1/notebooks/legacy/: basic_of_fastf1.ipynb  basic_of_tyre_deg.ipynb
F1/notebooks/race_debriefs_2025/: brazil_2025.ipynb
F1/saudi_2025/: data.py
F1/src/: custom.py  custom_classes.py  data.py  pipeline.py  plotting.py  setup.py  utils.py
WEC/notebooks/: bahrain_exploration.ipynb  exploration_bahrain.ipynb
